Fix scroll on Safari 26

--- a/src/co/bookmarks/index.module.styl
+++ b/src/co/bookmarks/index.module.styl
@@ -2,6 +2,5 @@
     --lazy-item-height: var(--header-height)
     overflow-x: clip
     overflow-y: auto
-    height: 100%
     width: 100%
 }
